--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,88 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
+body {
+  padding-top: 65px;
+}
+section {
+  scroll-margin-top: 80px; /* mesma altura do seu header */
+}
+header {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  position: fixed; /* <- agora fica fixo */
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  .logo {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  nav {
+    display: flex;
+    gap: 20px;
+    a {
+      color: #fff;
+      text-decoration: none;
+      transition: color 0.3s;
+      &:hover {
+        color: #f0a500;
+      }
+    }
+  }
+}
+
+/* Botão hambúrguer */
+.menu-btn {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  z-index: 20;
+}
+.menu-btn span {
+  height: 3px;
+  width: 27px;
+  background-color: #fff;
+  margin: 3px 0;
+  transition: 0.3s;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  nav {
+    position: fixed;
+    top: 0;
+    right: -220px;
+    height: 100%;
+    width: 200px;
+    background-color: #333;
+    flex-direction: column;
+    padding: 60px 20px;
+    gap: 15px;
+    transition: right 0.4s ease;
+    z-index: 15;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  nav.active {
+    right: 0;
+  }
+
+  .menu-btn {
+    display: flex;
+  }
+}
 
 /*
 div.inicio {
