--- a/css/style.css
+++ b/css/style.css
@@ -21,41 +21,47 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 html {
   scroll-behavior: smooth;
 }
 body {
-  padding-top: 65px;
+  padding-top: 56px;
+  background-color: var(--fundo-do-site);
 }
 section {
-  scroll-margin-top: 80px; /* mesma altura do seu header */
+  scroll-margin-top: 80px;
 }
 header {
-  background-color: #333;
-  color: #fff;
+  background-color: var(--fundo-do-site);
+  color: var(--cor-destaque);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
-  position: fixed; /* <- agora fica fixo */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   .logo {
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-weight: bold;
+    i {
+      margin: 0px 7px;
+    }
   }
   nav {
     display: flex;
     gap: 20px;
     a {
       color: #fff;
+      padding: 7px;
       text-decoration: none;
       transition: color 0.3s;
       &:hover {
-        color: #f0a500;
+        color: var(--cor-destaque);
       }
     }
   }
@@ -74,7 +80,6 @@ header {
   margin: 3px 0;
   transition: 0.3s;
 }
-
 /* Responsividade */
 @media (max-width: 768px) {
   nav {
@@ -103,19 +108,25 @@ header {
   }
 }
 
-/*
-div.inicio {
-  background-image: url(../img/capa-do-inicio.jpg);
+section#inicio {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/capa-do-inicio.jpg);
   height: 80vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   h1 {
-    color: white;
+    font-size: 1.4em;
+    color: var(--texto-principal);
   }
   p {
-    color: white;
+    width: 460px;
+    margin-top: 15px;
+    text-align: center;
+    color: var(--texto-secundario);
   }
 }
-*/
