--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 html {
@@ -154,6 +155,10 @@ section#filmes {
     flex-direction: column;
     border-radius: 10px;
     overflow: hidden;
+    transition: outline 0.1s;
+    &:hover {
+      outline: 1.5px solid var(--cor-destaque);
+    }
     img {
       width: 100%;
       height: 100%; /*talvez não precise*/
@@ -266,6 +271,27 @@ section#curiosidades {
           color: var(--texto-secundario);
         }
       }
+    }
+  }
+}
+
+footer {
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  div {
+    padding: 10px;
+    text-align: center;
+    h3 {
+      color: var(--cor-destaque);
+      i {
+        margin-right: 7px;
+      }
+    }
+    p {
+      color: var(--descricao-filmes);
+      margin: 15px 0px;
     }
   }
 }
