mais filmes adicionados

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ header {
 
 section#inicio {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../img/capa-do-inicio.jpg);
+    url(../img/imagem-inicio.webp);
   height: 80vh;
   background-size: cover;
   background-repeat: no-repeat;
